# pdfhandler

./: .gitignore  README.md  main.py  notes.md  pyproject.toml
modules/: handler.py  utils.py
