[tool.poetry]
name = "pdfhandler"
version = "0.1.0"
description = ""
authors = ["silverscorpio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "^3.16.2"
fpdf2 = "^2.7.7"
black = "^23.12.1"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
